--- a/build.gradle
+++ b/build.gradle
@@ -31,17 +31,35 @@ dependencies {
     implementation "javax.annotation:javax.annotation-api"
     implementation "io.micronaut:micronaut-http-server-netty"
     implementation "io.micronaut:micronaut-http-client"
+
+    implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.8"
+    // Required to work with Java 8 Time objects
+    implementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.9.8"
+
     kapt platform("io.micronaut:micronaut-bom:$micronautVersion")
     kapt "io.micronaut:micronaut-inject-java"
     kapt "io.micronaut:micronaut-validation"
     kaptTest platform("io.micronaut:micronaut-bom:$micronautVersion")
     kaptTest "io.micronaut:micronaut-inject-java"
-    runtimeOnly "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.8"
     runtimeOnly "ch.qos.logback:logback-classic:1.2.3"
     testImplementation platform("io.micronaut:micronaut-bom:$micronautVersion")
     testImplementation "io.micronaut.test:micronaut-test-kotlintest"
     testImplementation "io.mockk:mockk:1.9.3"
     testImplementation "io.kotlintest:kotlintest-runner-junit5:3.3.2"
+
+    // AssertK
+    testCompile 'com.willowtreeapps.assertk:assertk-jvm:0.22'
+
+    // Spek
+    testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlinVersion"
+    testImplementation ("org.spekframework.spek2:spek-dsl-jvm:$spekVersion") {
+        exclude group: 'org.jetbrains.kotlin'
+    }
+    testRuntimeOnly ("org.spekframework.spek2:spek-runner-junit5:$spekVersion") {
+        exclude group: 'org.junit.platform'
+        exclude group: 'org.jetbrains.kotlin'
+    }
+    testRuntimeOnly "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
 }
 
 test.classpath += configurations.developmentOnly
@@ -50,6 +68,7 @@ mainClassName = "com.coffeeculture.Application"
 
 test {
     useJUnitPlatform()
+    testLogging.events("passed", "skipped", "failed")
 }
 
 allOpen {
