fix: move Application.kt to sources package

--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,7 @@ dependencies {
 
 test.classpath += configurations.developmentOnly
 
-mainClassName = "com.coffeeculture.Application"
+mainClassName = "com.coffeeculture.sources.Application"
 
 test {
     useJUnitPlatform()
