feat: add support for retrieving Roasters
This commit adds support for retrieving Roasters from the InMemory datastore.

Currently supported resources

Retrieve all roasters:  /roasters
Retrieve roaster by ID: /roasters/{roasterId}

A few notes regarding dependencies...

RestAssured 4.3 -> 4.2
The latest version of RestAssured (4.3) was causing NullPointerException
failures when running in the Docker container for tests accessing the response
body. This was resolved by reverting to version 4.2.

MockK -> Mockito Kotlin
Basic mocking functionality was failing with illegal reflective access
exceptions (paraphrased...). I'm honestly not sure what all I did to try to
resolved this as it was a while ago. In the end, I went with Mockito Kotlin.

--- a/build.gradle
+++ b/build.gradle
@@ -42,9 +42,11 @@ dependencies {
     kaptTest platform("io.micronaut:micronaut-bom:$micronautVersion")
     kaptTest "io.micronaut:micronaut-inject-java"
     runtimeOnly "ch.qos.logback:logback-classic:1.2.3"
+    testImplementation 'io.rest-assured:rest-assured:4.2.0'
+    testImplementation 'io.rest-assured:kotlin-extensions:4.2.0'
     testImplementation platform("io.micronaut:micronaut-bom:$micronautVersion")
     testImplementation "io.micronaut.test:micronaut-test-kotlintest"
-    testImplementation "io.mockk:mockk:1.9.3"
+    testImplementation "com.nhaarman.mockitokotlin2:mockito-kotlin:2.2.0"
     testImplementation "io.kotlintest:kotlintest-runner-junit5:3.3.2"
 
     // AssertK
@@ -52,6 +54,7 @@ dependencies {
 
     // Spek
     testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlinVersion"
+
     testImplementation ("org.spekframework.spek2:spek-dsl-jvm:$spekVersion") {
         exclude group: 'org.jetbrains.kotlin'
     }
@@ -59,6 +62,7 @@ dependencies {
         exclude group: 'org.junit.platform'
         exclude group: 'org.jetbrains.kotlin'
     }
+
     testRuntimeOnly "org.jetbrains.kotlin:kotlin-reflect:$kotlinVersion"
 }
 
@@ -68,7 +72,7 @@ mainClassName = "com.coffeeculture.sources.Application"
 
 test {
     useJUnitPlatform()
-    testLogging.events("passed", "skipped", "failed")
+    testLogging.events "passed", "skipped", "failed"
 }
 
 allOpen {
