--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,9 @@
 micronaut:
   application:
     name: sources
+jackson:
+  serialization:
+    writeDatesAsTimestamps: false
+logger:
+  levels:
+    root: INFO
